--- a/WebApiNNcallMacro/WebApiNNcallMacro.csproj
+++ b/WebApiNNcallMacro/WebApiNNcallMacro.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <LangVersion>13</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
